--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -178,11 +178,16 @@ a.button--alt {
     display: block;
     order: 1;
     background-repeat: no-repeat;
-    background-position: center;
-    transform: scale(1.4);
-    margin-top: -4px;
+    // background-position: center;
+    background-position: center 9.5px;
+    background-size: 28px;
+    padding: 10px;
+    opacity: 0.8 !important;
     margin-left: var(--spacing-xs);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='19' height='19' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-monitor'%3E%3Crect x='2' y='3' width='20' height='14' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='8' y1='21' x2='16' y2='21'%3E%3C/line%3E%3Cline x1='12' y1='17' x2='12' y2='21'%3E%3C/line%3E%3C/svg%3E");
+    &:hover {
+      opacity: 1 !important;
+    }
   }
 
   &:focus:not(:focus-visible) {
@@ -200,11 +205,16 @@ a.button--alt {
   display: block;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 28px;
 
   &:focus:not(:focus-visible) {
     display: block;
     background-repeat: no-repeat;
     background-position: center;
+  }
+
+  @media (max-width: $breakpoint-small) {
+    background-size: 24px;
   }
 }
 
@@ -237,7 +247,7 @@ a.button--alt {
   //
   // TEMP: for now, just hardcode the left-right margin so that it looks
   // equally spaced compared to its siblings.
-  margin: 9px 0.5rem auto 0.7rem;
+  margin: auto 0.5rem auto 0.7rem;
 
   order: 1;
   width: 24px;
