--- a/ui/scss/component/menu-button.scss
+++ b/ui/scss/component/menu-button.scss
@@ -156,9 +156,10 @@ reach-portal {
   }
 
   .MuiPaper-root {
-    top: calc(var(--header-height) - 11px) !important;
+    top: calc(var(--header-height) - 10px) !important;
+    transition: none !important;
     @media (max-width: $breakpoint-small) {
-      top: calc(var(--header-height-mobile) - 11px) !important;
+      top: calc(var(--header-height-mobile) - 10px) !important;
     }
   }
 
@@ -190,6 +191,230 @@ reach-portal {
   @extend .menu__list;
 }
 
+.menu__list--notifications {
+  .MuiMenu-list {
+    padding: 0;
+    backdrop-filter: blur(4px) !important;
+
+    background-color: unset !important;
+  }
+  .MuiMenu-list--paper {
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
+    background-color: unset !important;
+  }
+
+  .menu__list--notifications-header {
+    height: var(--spacing-xs);
+    background-color: rgba(var(--color-header-background-base), 0.9);
+    backdrop-filter: blur(4px) !important;
+  }
+
+  a:nth-child(1) {
+    .menu__list--notification {
+      border-top: 1px solid rgba(var(--color-header-button-base), 0.95);
+    }
+  }
+
+  .menu__list--notifications-list {
+    overflow: hidden !important;
+    .menu__list--notification {
+      position: relative;
+      overflow: hidden !important;
+      width: 440px;
+      padding: var(--spacing-s);
+      display: flex;
+      background-color: rgba(var(--color-header-button-base), 0.95);
+      border-top: 1px solid var(--color-header-background);
+      transition: border-left 0.4s;
+
+      .notification__icon {
+        margin-top: 0;
+        margin-left: 0;
+        .channel-thumbnail {
+          margin-right: var(--spacing-s);
+          width: 3rem;
+          height: 3rem;
+          img,
+          canvas {
+            width: 3rem;
+            height: 3rem;
+            border-radius: 50%;
+          }
+        }
+      }
+      .menu__list--notification-channel-unread {
+        border: 2px solid var(--color-primary);
+      }
+
+      .menu__list--notification-info {
+        overflow: hidden;
+        width: 100%;
+        .menu__list--notification-type {
+          display: flex;
+          flex-flow: wrap;
+          gap: var(--spacing-xxxs);
+          width: 100%;
+          color: rgba(var(--color-text-base), 0.6);
+          font-size: var(--font-xsmall);
+
+          .notification__claim-title {
+            width: 100%;
+            color: rgba(var(--color-text-base), 0.6);
+            font-size: var(--font-xsmall);
+            font-weight: 400;
+            flex: 1;
+
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            display: block;
+          }
+
+          .button__content {
+            display: flex;
+            margin: 0;
+            .channel-name {
+              margin: 0;
+              color: rgba(var(--color-text-base), 0.6);
+              font-size: var(--font-xsmall);
+              font-weight: 400;
+            }
+          }
+
+          span {
+            margin-right: 0;
+            .credit-amount {
+              color: rgba(var(--color-text-base), 0.6);
+              font-size: var(--font-xsmall);
+              font-weight: 400;
+              svg {
+                margin-bottom: 0;
+              }
+            }
+          }
+        }
+
+        .menu__list--notification-title {
+          color: var(--color-text);
+          flex-grow: 1;
+          margin-bottom: -3px;
+          width: 100%;
+          .notification__text {
+            width: 100%;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            display: block;
+            blockquote {
+              width: 100%;
+              overflow: hidden;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+              display: block;
+              padding-right: 0;
+            }
+          }
+        }
+        .date_time {
+          color: rgba(var(--color-text-base), 0.6);
+        }
+        span {
+          color: var(--color-primary);
+          display: inline-block;
+          font-size: var(--font-xxsmall);
+          margin-right: var(--spacing-xxxs);
+        }
+        .sticker__comment {
+          margin-left: 0;
+          padding: var(--spacing-xxs);
+          padding-left: 0;
+          height: 50px;
+        }
+      }
+
+      &:hover {
+        cursor: pointer;
+        background-color: rgba(var(--color-header-background-base), 1);
+        .menu__list--notification-info {
+          .menu__list--notification-title {
+            .notification__text {
+              color: var(--color-primary);
+              blockquote {
+                color: var(--color-primary) !important;
+              }
+            }
+          }
+        }
+        .delete-notification {
+          opacity: 1;
+        }
+      }
+    }
+
+    .menu__list--notification-unread {
+      border-left: 2px solid var(--color-primary);
+    }
+
+    .menu__list--notification-empty {
+      display: block;
+      word-wrap: break-word;
+      white-space: normal;
+      width: 440px;
+      padding: var(--spacing-m) var(--spacing-s);
+      background-color: rgba(var(--color-header-button-base), 0.95);
+      color: var(--color-text);
+      text-align: center;
+      .menu__list--notification-empty-title {
+        font-weight: bold;
+        font-size: var(--font-body);
+      }
+      .menu__list--notification-empty-text {
+        color: rgba(var(--color-text-base), 0.6);
+        font-size: var(--font-xsmall);
+        font-weight: 400;
+      }
+    }
+
+    .delete-notification {
+      position: absolute;
+      top: var(--spacing-xs);
+      right: var(--spacing-xxs);
+      opacity: 0;
+      .icon__wrapper {
+        width: 20px;
+        height: 20px;
+        padding: 0;
+        background-color: rgba(var(--color-header-button-base), 0.95);
+        outline: 4px solid rgba(var(--color-header-background-base), 1);
+
+        svg {
+          width: 12px;
+          height: 12px;
+        }
+      }
+      &:hover {
+        .icon__wrapper {
+          background-color: var(--color-primary);
+          color: var(--color-primary-contrast);
+        }
+      }
+    }
+  }
+
+  .menu__list--notifications-more {
+    color: var(--color-text);
+    background-color: rgba(var(--color-header-background-base), 1);
+    padding: var(--spacing-s) var(--spacing-xs);
+    text-align: center;
+    border-top: 1px solid rgba(var(--color-header-button-base), 0.95);
+
+    &:hover {
+      cursor: pointer;
+      color: var(--color-primary);
+    }
+  }
+}
+
 .MuiMenuItem-root {
   margin-left: 0px !important;
   font-size: var(--font-small) !important;
@@ -199,8 +424,6 @@ reach-portal {
 .menu__link {
   display: flex;
   align-items: center;
-  // padding: var(--spacing-s);
-  // padding-right: var(--spacing-l);
   padding: var(--spacing-xs) var(--spacing-s) var(--spacing-xs) var(--spacing-s);
   height: var(--button-height);
   color: var(--color-text);
