Another padding adjustment on mobile

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -828,5 +828,8 @@ $actions-z-index: 2;
   }
   @media (max-width: $breakpoint-small) {
     padding: var(--spacing-s);
+    .yrbl__wrap {
+      margin-top: var(--spacing-l);
+    }
   }
 }
