--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -1671,6 +1671,47 @@ input:not(input:-webkit-autofill)::-webkit-contacts-auto-fill-button {
 #onetrust-consent-sdk #onetrust-banner-sdk {
   background-color: var(--color-header-background);
   backdrop-filter: blur(4px);
+  max-height: 100%;
+  height: 190px;
+
+  #onetrust-button-group-parent {
+    margin-top: 10px;
+  }
+
+  .banner_logo {
+    display: block;
+    float: left;
+    margin-top: 20px;
+    margin-left: 80px;
+    margin-right: 30px;
+    width: 150px;
+    height: 150px;
+    background-image: url('/public/img/cookie.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    @media (max-width: $breakpoint-medium) {
+      margin-left: 30px;
+      margin-right: 10px;
+    }
+
+    @media (max-width: $breakpoint-small) {
+      display: none;
+    }
+  }
+
+  @media (max-width: $breakpoint-medium) {
+    #onetrust-policy {
+      margin-right: 60px;
+    }
+
+    #onetrust-button-group-parent {
+      margin-top: 0;
+      #onetrust-button-group {
+        margin-right: 10px !important;
+      }
+    }
+  }
 
   #onetrust-policy-title,
   #onetrust-policy-text,
