Allow capture of name during adding of card (#1657)
* allow someone to save name during card signup

* regexp to not allow numbers or special characters

* add i8n string

* various touchups

--- a/ui/scss/component/_stripe-card.scss
+++ b/ui/scss/component/_stripe-card.scss
@@ -423,3 +423,23 @@ pre {
 .currency-to-use-selector {
   margin: 0 auto;
 }
+
+// center loading div
+.getting-card-status .card__header--between {
+  justify-content: center;
+}
+
+#card-name {
+  width: 284px;
+  box-shadow: unset;
+  color: #32325d;
+  background-color: white;
+}
+
+.payment-details {
+  display: block;
+}
+
+.sr-field-error {
+  color: var(--color-text-error);
+}
