--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -152,7 +152,7 @@
   --color-editor-hr-preview: #a0a0a0;
 
   // Ads
-  --color-ads-background: rgba(var(--color-secondary-dynamic), 0.1);
+  --color-ads-background: var(--color-header-background);
   --color-ads-text: var(--color-secondary-contrast);
   --color-ads-link: var(--color-secondary);
 
